Prevent a click of the help icon from jumping to the top of the browser
action's window when the browser action has a vertical scroll bar.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -83,3 +83,7 @@ html {
 .loader-container {
   margin-top: 50px;
 }
+
+#help-icon {
+  cursor: pointer;
+}
